--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-app",
-  "hompage": "https://robby-13.github.io/project-app",
+  "hompage": "https://robby-13.github.io/GA-React-Project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
